<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:paddingHorizontal="20dp"
    android:paddingVertical="18dp"
    android:background="@drawable/popup_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/popupAnimation"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:scaleType="centerCrop"
        app:lottie_rawRes="@raw/lottie_popup"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/popupMainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_mainText"
        android:textStyle="bold"
        android:textSize="18dp"
        android:textAlignment="center"
        android:paddingBottom="5dp"
        android:layout_below="@id/popupAnimation">
    </TextView>

    <TextView
        android:id="@+id/popupDescText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_descText"
        android:layout_below="@id/popupMainText"
        android:layout_marginBottom="10dp">
    </TextView>

    <LinearLayout
        android:id="@+id/popupAltStepOne"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/popupDescText">
        <ImageView
            android:id="@+id/popupAltStepOneImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_settings"
            android:layout_marginRight="5dp">
        </ImageView>
        <TextView
            android:layout_height="40dp"
            android:layout_width="wrap_content"
            android:text="@string/pop_AltTextStepOne"
            android:gravity="center">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/popupAltStepTwo"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/popupAltStepOne">
        <ImageView
            android:id="@+id/popupAltStepTwoImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_launcher_foreground"
            android:scaleType="centerCrop"
            android:layout_marginRight="5dp">
        </ImageView>
        <TextView
            android:layout_height="40dp"
            android:layout_width="wrap_content"
            android:text="@string/pop_AltTextStepTwo"
            android:gravity="center"
            android:layout_marginLeft="-5dp">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/popupAltStepThree"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/popupAltStepTwo">
        <ImageView
            android:id="@+id/popupAltStepThreeImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_photo"
            android:layout_marginRight="5dp">
        </ImageView>
        <TextView
            android:layout_height="40dp"
            android:layout_width="wrap_content"
            android:text="@string/pop_AltTextStepThree"
            android:gravity="center">
        </TextView>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/popupAltStepThree"
        android:layout_alignParentRight="true"
        android:layout_marginTop="15dp">
        <Button
            android:id="@+id/btnPopupDeny"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Deny"
            android:textColor="@color/base_2"
            android:background="@null"
            >
        </Button>
        <Button
            android:id="@+id/btnPopupAllow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Allow"
            android:textColor="@color/white"
            android:background="@drawable/button_bg_rounded_corners"
            android:layout_toRightOf="@+id/btnPopupDeny">
        </Button>
    </RelativeLayout>
</RelativeLayout>